# cuda-fx

./: .gitignore  CMakeLists.txt  export.cmake
include/cudafx/: array.hpp  device.hpp  device_id.hpp  image.hpp  kernel.hpp  memory.hpp  misc.hpp  profiler.hpp  stream.hpp  transfer.hpp
include/cudafx/internal/: attribute.hpp  format.hpp
tests/: CMakeLists.txt  device.cu
tools/: CMakeLists.txt  device_inspect.cc
